// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`NumberKeypad renders correctly with decimal separator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingHorizontal": 12,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit1"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit2"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit3"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        3
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit4"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        4
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit5"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        5
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit6"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        6
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit7"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        7
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit8"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        8
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit9"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        9
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit,"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        ,
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit0"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        0
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        <svg
          fill="none"
          height={30}
          style={Object {}}
          viewBox="0 0 35 18"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.82198 9.7422L9.57436 16.7422C9.75813 16.9081 9.99693 17 10.2445 17H33C33.5523 17 34 16.5523 34 16V2C34 1.44772 33.5523 1 33 1H10.2445C9.99693 1 9.75813 1.09186 9.57436 1.25779L1.82198 8.25779C1.38221 8.65488 1.38221 9.34512 1.82198 9.7422Z"
            stroke="#2E3338"
            strokeWidth="3"
            style={Object {}}
          />
          <path
            d="M17 5L25 13M17 13L25 5"
            stroke="#2E3338"
            strokeWidth="3"
            style={Object {}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;

exports[`NumberKeypad renders correctly without decimal separator 1`] = `
<View
  style={
    Object {
      "alignItems": "center",
      "justifyContent": "center",
      "paddingHorizontal": 12,
      "width": "100%",
    }
  }
>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit1"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        1
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit2"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        2
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit3"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        3
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit4"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        4
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit5"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        5
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit6"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        6
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit7"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        7
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit8"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        8
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit9"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        9
      </Text>
    </View>
  </View>
  <View
    style={
      Object {
        "alignItems": "center",
        "flexDirection": "row",
        "justifyContent": "space-between",
        "width": "100%",
      }
    }
  >
    <View
      style={
        Object {
          "alignItems": "center",
          "color": "#2E3338",
          "fontFamily": "Inter-Medium",
          "fontSize": 22,
          "justifyContent": "center",
          "lineHeight": 28,
          "padding": 24,
          "textAlign": "center",
          "width": 64,
        }
      }
    />
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
      testID="digit0"
    >
      <Text
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        0
      </Text>
    </View>
    <View
      accessible={true}
      focusable={true}
      nativeBackgroundAndroid={
        Object {
          "attribute": "selectableItemBackgroundBorderless",
          "type": "ThemeAttrAndroid",
        }
      }
      onClick={[Function]}
      onResponderGrant={[Function]}
      onResponderMove={[Function]}
      onResponderRelease={[Function]}
      onResponderTerminate={[Function]}
      onResponderTerminationRequest={[Function]}
      onStartShouldSetResponder={[Function]}
    >
      <View
        style={
          Object {
            "alignItems": "center",
            "color": "#2E3338",
            "fontFamily": "Inter-Medium",
            "fontSize": 22,
            "justifyContent": "center",
            "lineHeight": 28,
            "padding": 24,
            "textAlign": "center",
            "width": 64,
          }
        }
      >
        <svg
          fill="none"
          height={30}
          style={Object {}}
          viewBox="0 0 35 18"
          width={30}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M1.82198 9.7422L9.57436 16.7422C9.75813 16.9081 9.99693 17 10.2445 17H33C33.5523 17 34 16.5523 34 16V2C34 1.44772 33.5523 1 33 1H10.2445C9.99693 1 9.75813 1.09186 9.57436 1.25779L1.82198 8.25779C1.38221 8.65488 1.38221 9.34512 1.82198 9.7422Z"
            stroke="#2E3338"
            strokeWidth="3"
            style={Object {}}
          />
          <path
            d="M17 5L25 13M17 13L25 5"
            stroke="#2E3338"
            strokeWidth="3"
            style={Object {}}
          />
        </svg>
      </View>
    </View>
  </View>
</View>
`;
